Added few search flight tests

--- a/report_Login_tests.html
+++ b/report_Login_tests.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22390],[],[[4,0,0,[],[1,85,3908],[]],[5,0,0,[],[1,3994,665],[]],[6,0,0,[],[1,4660,5508],[]],[7,0,0,[],[1,10169,5764],[]],[8,0,0,[],[1,15934,5166],[]],[9,0,0,[],[1,21101,1288],[]]],[],[6,6,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,36392],[],[[4,0,0,[],[1,102,9009],[]],[5,0,0,[],[1,9112,1516],[]],[6,0,0,[],[1,10628,2001],[]],[7,0,0,[],[1,12630,4344],[]],[8,0,0,[],[1,16974,4297],[]],[9,0,0,[],[1,21272,4760],[]],[10,0,0,[],[1,26033,4312],[]],[11,0,0,[],[1,30345,4756],[]],[12,0,0,[],[1,35102,1290],[]]],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*MainPage UI tests","*/Users/martinpur/Documents/Automatizovane_testy_vzory/Automated_tests/MainPage_UI_tests.robot","*Automated_tests/MainPage_UI_tests.robot","*Pre-Conditions","*TC01-Ryanair_MainPage_Check_If_Flight_Search_Is_Present","*TC02-Ryanair_MainPage_Flight_Search_Empty_Airports","*TC03-Ryanair_MainPage_Flight_Search_Empty_Destination_Airport","*TC04-Ryanair_MainPage_Flight_Search_Empty_Travel_Dates","*Post-Conditions"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login tests","*/Users/martinpur/Documents/Automatizovane_testy_vzory/Automated_tests/Login_tests.robot","*Automated_tests/Login_tests.robot","*Pre-Conditions","*TC01-Ryanair_MainPage_Navigate_To_LoginPage","*TC02-Ryanair_LoginPage_Login_With_Empty_Fields","*TC03-Ryanair_LoginPage_Login_With_Incorrect_Informations","*TC04-Ryanair_LoginPage_Login_With_Bad_Email_Format","*TC05-Ryanair_LoginPage_Login_With_Correct_Name_And_Incorrect_Password","*TC06-Ryanair_LoginPage_Login_With_Non_Existing_Email","*TC07-Ryanair_LoginPage_Login_With_Correct_Name_And_Correct_Password","*Post-Conditions"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"MainPage UI tests","name":"MainPage UI tests","pass":6,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:36","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"Login tests","name":"Login tests","pass":9,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1707899742059;
+window.output["baseMillis"] = 1707481798652;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22403;
+window.output["generated"] = 36407;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
