--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22390],[],[[4,0,0,[],[1,85,3908],[]],[5,0,0,[],[1,3994,665],[]],[6,0,0,[],[1,4660,5508],[]],[7,0,0,[],[1,10169,5764],[]],[8,0,0,[],[1,15934,5166],[]],[9,0,0,[],[1,21101,1288],[]]],[],[6,6,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,40621],[],[[4,0,0,[],[1,111,3957],[]],[5,0,0,[],[1,4069,666],[]],[6,0,0,[],[1,4736,5487],[]],[7,0,0,[],[1,10223,5757],[]],[8,0,0,[],[1,15982,5162],[]],[9,0,0,[],[1,21145,4303],[]],[10,0,0,[],[1,25449,4860],[]],[11,0,0,[],[1,30309,9034],[]],[12,0,0,[],[1,39343,1277],[]]],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*MainPage UI tests","*/Users/martinpur/Documents/Automatizovane_testy_vzory/Automated_tests/MainPage_UI_tests.robot","*Automated_tests/MainPage_UI_tests.robot","*Pre-Conditions","*TC01-Ryanair_MainPage_Check_If_Flight_Search_Is_Present","*TC02-Ryanair_MainPage_Flight_Search_Empty_Airports","*TC03-Ryanair_MainPage_Flight_Search_Empty_Destination_Airport","*TC04-Ryanair_MainPage_Flight_Search_Empty_Travel_Dates","*Post-Conditions"]);
+window.output["strings"] = window.output["strings"].concat(["*","*MainPage UI tests","*/Users/martinpur/Documents/Automatizovane_testy_vzory/Automated_tests/MainPage_UI_tests.robot","*Automated_tests/MainPage_UI_tests.robot","*Pre-Conditions","*TC01-Ryanair_MainPage_Check_If_Flight_Search_Is_Present","*TC02-Ryanair_MainPage_Flight_Search_Empty_Airports","*TC03-Ryanair_MainPage_Flight_Search_Empty_Destination_Airport","*TC04-Ryanair_MainPage_Flight_Search_Empty_Travel_Dates","*TC06-Ryanair_MainPage_Flight_Search_Empty_Return_Date","*TC07-Ryanair_MainPage_Flight_Search_Flight_With_Valid_Attributes","*TC0X-Ryanair_MainPage_Flight_Search_One_Way_Flight_No_Return_Date_Present","*Post-Conditions"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"MainPage UI tests","name":"MainPage UI tests","pass":6,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:41","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:41","fail":0,"id":"s1","label":"MainPage UI tests","name":"MainPage UI tests","pass":9,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1707899742059;
+window.output["baseMillis"] = 1707989021825;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22403;
+window.output["generated"] = 40633;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
