TS_02 manual tests

--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,63304],[],[[4,0,0,[],[1,124,11266],[]],[5,0,0,[],[1,11390,661],[]],[6,0,0,[],[1,12052,5881],[]],[7,0,0,[],[1,17934,5819],[]],[8,0,0,[],[1,23755,5182],[]],[9,0,0,[],[1,28937,4302],[]],[10,0,0,[],[1,33240,4690],[]],[11,0,0,[],[1,37931,9284],[]],[12,0,0,[],[0,47215,14810,13],[]],[14,0,0,[],[1,62026,1278],[]]],[],[10,9,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11985],[],[[4,0,0,[],[1,108,4297],[]],[5,0,0,[],[1,4406,6294],[]],[6,0,0,[],[1,10701,1284],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*MainPage Search Flight tests","*/Users/martinpur/Documents/Automatizovane_testy_vzory/Automated_tests/MainPage_Search_Flight_tests.robot","*Automated_tests/MainPage_Search_Flight_tests.robot","*Pre-Conditions","*TC01-Ryanair_MainPage_Check_If_Flight_Search_Is_Present","*TC02-Ryanair_MainPage_Flight_Search_Empty_Airports","*TC03-Ryanair_MainPage_Flight_Search_Empty_Destination_Airport","*TC04-Ryanair_MainPage_Flight_Search_Empty_Travel_Dates","*TC06-Ryanair_MainPage_Flight_Search_Empty_Return_Date","*TC07-Ryanair_MainPage_Flight_Search_Flight_With_Valid_Attributes","*TC08-Ryanair_MainPage_Flight_Search_One_Way_Flight_No_Return_Date_Present","*TC09-Ryanair_MainPage_Flight_Search_Promo_Code","*Alert not found in 5 seconds.","*Post-Conditions"]);
+window.output["strings"] = window.output["strings"].concat(["*","*MainPage Car Rent tests","*/Users/martinpur/Documents/Automatizovane_testy_vzory/Automated_tests/MainPage_Car_Rent_tests.robot","*Automated_tests/MainPage_Car_Rent_tests.robot","*Pre-Conditions","*TC_04_01-Ryanair_MainPage_Switch_To_Car_Rent","*Post-Conditions"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:03","fail":1,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:01:03","fail":1,"id":"s1","label":"MainPage Search Flight tests","name":"MainPage Search Flight tests","pass":9,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"MainPage Car Rent tests","name":"MainPage Car Rent tests","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1708004069293;
+window.output["baseMillis"] = 1708420824588;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 63317;
+window.output["generated"] = 11994;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
