--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11985],[],[[4,0,0,[],[1,108,4297],[]],[5,0,0,[],[1,4406,6294],[]],[6,0,0,[],[1,10701,1284],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,12179],[],[[4,0,0,[],[1,109,3899],[]],[5,0,0,[],[1,4009,1821],[]],[6,0,0,[],[0,5832,1863,7],[]],[8,0,0,[],[1,7695,3193],[]],[9,0,0,[],[1,10889,1290],[]]],[],[5,4,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*MainPage Car Rent tests","*/Users/martinpur/Documents/Automatizovane_testy_vzory/Automated_tests/MainPage_Car_Rent_tests.robot","*Automated_tests/MainPage_Car_Rent_tests.robot","*Pre-Conditions","*TC_04_01-Ryanair_MainPage_Switch_To_Car_Rent","*Post-Conditions"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TS 05-MainPage UI tests","*/Users/martinpur/Documents/Automatizovane_testy_vzory/Automated_tests/TS_05-MainPage_UI_tests.robot","*Automated_tests/TS_05-MainPage_UI_tests.robot","*Pre-Conditions","*TC_05_01-Ryanair_MainPage_Swaping_Searches","*TC_05_02-Ryanair_MainPage_Travel_Info_PopUp","*Element with locator '//*[@id=\"ry-tooltip-2\"]/div[2]/div/div[2]/span' not found.","*TC_05_03-Ryanair_MainPage_Hover_On_Offering_Cards","*Post-Conditions"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"MainPage Car Rent tests","name":"MainPage Car Rent tests","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":1,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:12","fail":1,"id":"s1","label":"TS 05-MainPage UI tests","name":"TS 05-MainPage UI tests","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1708420824588;
+window.output["baseMillis"] = 1711368195481;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11994;
+window.output["generated"] = 12190;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
